#224 text not wrapping in ie (fixed for 8, to test for 9 & 10)

--- a/src/main/webapp/themes/default/css/fulldoc.css
+++ b/src/main/webapp/themes/default/css/fulldoc.css
@@ -335,6 +335,8 @@ from search.css:
 		float:			right;
 		margin:			0 0 1em 1em;
 		max-width:		30%;
+		white-space:	normal;
+		word-break:		break-all;
 	}
 	
 	.sidebar-right ul{
