--- a/src/main/webapp/themes/default/css/ie8.css
+++ b/src/main/webapp/themes/default/css/ie8.css
@@ -887,6 +887,10 @@ a.action-link span{
 	float:			right;
 	margin:			0 0 1em 1em;
 	max-width:		30%;
+	
+	width:		30%;
+	white-space: normal;
+	word-break: break-all;
 }
 
 .sidebar-right ul{
